# cc-notes

./: .clang-format  .gitignore  README.md
algorithm/: .clang-format
algorithm/c_vector/: vector.c
algorithm/dp/: int_part.c
book/: 05-pointers.md
build-system/: meson-notes.md  使用CMake添加gtest.md
c-demo/: .clang-format  README.md
c-demo/meson/: meson.build
cc-demo/: .clang-format
codes/: Makefile
cpp-book/: 00-preface.md  01-intro.md  02-usability.md  03-runtime.md  04-containers.md  05-pointers.md  06-regex.md  07-thread.md  08-filesystem.md  09-others.md  10-cpp20.md
cpp-notes/: C++右值和移动语义.md  C++的RAII机制.md  C++的pair和tuple.md  C++里的struct.md  std_bind用法和lambda替代.md  关于constexpr关键字.md  关于final关键字.md  关于lambda的使用场景.md  关于static关键字.md  函数入参有默认值时的写法.md  子类隐藏父类非虚同名函数.md  智能指针unique_ptr用法.md  父类的析构函数要为虚函数.md  类成员函数的隐式内联.md  类的特殊成员函数控制.md
cpp-notes-src/: Makefile  ptr_share.cpp  ptr_unique.cpp  ptr_weak.cpp  raii.cpp  rvalue.cpp  sort.cpp
network/: tun和tap.md
notes/: C++右值和移动语义.md  C++多线程编程对比pthread.md  C++对象声明和定义.md  C++灵活打桩测试的方法.md  C++的RAII机制.md  C++的可变参函数.md  C++的模板入门.md  inline_method.cpp  std_bind.cpp  std_bind用法和lambda替代.md  关于final关键字.md  子类不隐藏父类同名非虚方法.md  子类隐藏父类非虚同名函数.md  左值右值和完美转发.md  智能指针shared_ptr和weak_ptr用法.md  智能指针unique_ptr原理和用法.md  智能指针unique_ptr用法.md  父类的析构函数要为虚函数.md  用纯虚函数模拟接口行为.md  类构造函数传参方法说明.md
sys-test/: 使用CMake添加gtest.md  覆盖系统库符号测试.md
sys-test/gtest-demo/: CMakeLists.txt
sys-test/gtest-demo/include/: base.h
sys-test/gtest-demo/src/: add.cpp
sys-test/gtest-demo/tests/: test.cpp
systemc/: event.cc
util/: log.h
(+124 files in other folders)
